Fix - responsive/alignments/etc.

--- a/containers/payments/subscription/PlanSelection.scss
+++ b/containers/payments/subscription/PlanSelection.scss
@@ -8,7 +8,7 @@
 		&.flex-nowrap {
 			flex-wrap: wrap;
 			.field {
-				width: 100%;
+				min-width: 100%;
 				margin-right: 0;
 				margin-bottom: 0.25em;
 			}
